--- a/20AAA3/template/gallary.html
+++ b/20AAA3/template/gallary.html
@@ -2,9 +2,62 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Gallery</title>
 </head>
 <body>
+    <h1>Ukraine War</h1>
 
+    <h2>Photos</h2>
+
+    <div class="row">
+        <div class="column">
+            <img src="https://images.pexels.com/photos/11477794/pexels-photo-11477794.jpeg">
+            <img src="https://images.pexels.com/photos/11477799/pexels-photo-11477799.jpeg">
+            <img src="https://images.pexels.com/photos/11477792/pexels-photo-11477792.jpeg">
+            <img src="https://images.pexels.com/photos/14377758/pexels-photo-14377758.jpeg">
+         </div>
+         <div class="column">
+            <img src="https://images.pexels.com/photos/11477801/pexels-photo-11477801.jpeg">
+            <img src="https://images.pexels.com/photos/11284546/pexels-photo-11284546.jpeg">
+            <img src="https://images.pexels.com/photos/11284549/pexels-photo-11284549.jpeg">
+         </div>
+         <div class="column">
+            <img src="https://images.pexels.com/photos/11421244/pexels-photo-11421244.jpeg">
+            <img src="https://images.pexels.com/photos/11630368/pexels-photo-11630368.jpeg">
+            <img src="https://images.pexels.com/photos/11318288/pexels-photo-11318288.jpeg">
+         </div>
+         <div class="column">
+            <img src="https://images.pexels.com/photos/11421286/pexels-photo-11421286.jpeg">
+            <img src="https://images.pexels.com/photos/11392874/pexels-photo-11392874.jpeg">
+            <img src="https://images.pexels.com/photos/11417861/pexels-photo-11417861.jpeg">
+         </div>
+    </div>
+
+    <h2>Videos</h2>
+
+    <div class="video-container">
+        <div class="row">
+            <div class="column">
+                <div class="video">
+                    <iframe src="https://player.vimeo.com/external/573312093.sd.mp4?s=d2f5b504600af1d707c87f48aa3085f4052ffb3c&profile_id=164&oauth2_token_id=57447761" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                </div>
+            </div>
+            <div class="column">
+                <div class="video">
+                    <iframe src="https://vod-progressive.akamaized.net/exp=1680672753~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F508%2F29%2F727544029%2F3373430292.mp4~hmac=0a2bbff0847e1f5ded8ab00fbb67dd57602a2eab7d6d0a3ea230c6560a82d45f/vimeo-prod-skyfire-std-us/01/508/29/727544029/3373430292.mp4?filename=file.mp4" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                </div>
+            </div>
+            <div class="column">
+                <div class="video">
+                    <iframe src="https://vod-progressive.akamaized.net/exp=1680672863~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F509%2F29%2F727548664%2F3373450006.mp4~hmac=7541f813ff129429271844b74d72d6e71d88c64ba49c99445dda2fc73926caa5/vimeo-prod-skyfire-std-us/01/509/29/727548664/3373450006.mp4?filename=file.mp4" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                </div>
+            </div>
+            <div class="column">
+                <div class="video">
+                    <iframe src="https://vod-progressive.akamaized.net/exp=1680672969~acl=%2Fvimeo-prod-skyfire-std-us%2F01%2F1589%2F28%2F707948564%2F3280618201.mp4~hmac=ca6e9dd9d67293c80d80685a53eee105d7631589c21a088a7c13f6e038d4b4b9/vimeo-prod-skyfire-std-us/01/1589/28/707948564/3280618201.mp4?filename=file.mp4" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+                </div>
+            </div>
+        </div>       
+    </div>
 </body>
 </html>
