--- a/20AAA3/template/head.html
+++ b/20AAA3/template/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content="we are a team" />
     <meta name="keywords" content="very good donation team" />
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link href="../static/main.css" rel="stylesheet" type="text/css" />
+    <link href="../static/css/main.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="main">
