--- a/20AAA3/template/login.html
+++ b/20AAA3/template/login.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'logmod.html' %}
+{% block content %}
+              <h2 class="text-uppercase text-center mb-5">Login</h2>
+              <form>
 
-</body>
-</html>
+                <div class="form-outline mb-4">
+                  <input type="text" id="form3Example1cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example1cg">name</label>
+                </div>
+
+                <div class="form-outline mb-4">
+                  <input type="password" id="form3Example4cg" class="form-control form-control-lg" />
+                  <label class="form-label" for="form3Example4cg">Password</label>
+                </div>
+
+
+
+                <div class="d-flex justify-content-center">
+                  <button type="button"
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body" href='{{url_for("afterlogin")}}'>login</button>
+                </div>
+
+                <p class="text-center text-muted mt-5 mb-0">NO account? <a href='{{url_for("register")}}' class="fw-bold text-body"><u>register here</u></a></p>
+
+              </form>
+{% endblock %}
