--- a/20AAA3/template/mode.html
+++ b/20AAA3/template/mode.html
@@ -1,72 +1,10 @@
-<!DOCTYPE HTML>
-<html lang="zh-CN">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>donating team</title>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="renderer" content="webkit" />
-    <meta name="description" content="we are a team" />
-    <meta name="keywords" content="very good donation team" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
-    <link href="../static/main.css" rel="stylesheet" type="text/css" />
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-    <div class="main">
 
-<!--[if lt IE 8]>
-<script>alert("您正在使用的浏览器版本过低，请使用Chrome、Firefox或IE8及以上浏览器！")</script>
-<![endif]-->
-<img src="images/logo.png" class="logo" />
-
-<ul class="menuBar">
-    <li><a href="{{url_for('home')}}">home</a></li>
-    <li><a href="{{url_for('about')}}">about us</a></li>
-    <li><a href="{{url_for('gallary')}}">gallary</a></li>
-    <li><a href="{{url_for('contact')}}"><span>contact us</span></a></li>
-</ul>
-
-{% block content %}
-{% endblock %}
-                <div class="down">
-    <p>
-        site visited{amount}, total fund raised{money}, last donation{people},{number},{time}
-
-    </p>
-</div>
-
-    </div>
 </body>
-
-
-
-
-
-<script src="Scripts/jquery.cycle.all.min.js"></script>
-<script>
-$(document).ready(function(){
-    $(".cycle").hover(function () {
-        $(".prev").fadeIn(200);
-        $(".next").fadeIn(200);
-    }, function () {
-        $(".prev").fadeOut(200);
-        $(".next").fadeOut(200);
-    });
-    $(".cycle ul").cycle({
-        fx: 'fade'
-        , speed: 600
-        , timeout: 3000
-        , prev: '.prev'
-        , next: '.next'
-    });
-    $(".slider ul").cycle({
-        fx: "fade"
-        , speed: 600
-        , timeout: 4000
-        , pager: ".slider ol"
-        , pagerAnchorBuilder: function (i, pic) {
-            return '<li>' + (i + 1) + '</li>';
-        }
-    });
-});
-</script>
 </html>
