--- a/20AAA3/template/gallary.html
+++ b/20AAA3/template/gallary.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Gallery</title>
-</head>
-<body>
+{% extends 'indexmode.html' %}
+{% block content %}
     <h1>Ukraine War</h1>
 
     <h2>Photos</h2>
@@ -59,5 +54,4 @@
             </div>
         </div>       
     </div>
-</body>
-</html>
+{% endblock %}
