--- a/20AAA3/template/index.html
+++ b/20AAA3/template/index.html
@@ -1,19 +1,30 @@
 {% extends 'indexmode.html' %}
 {% block content %}
+<script src="https://www.qingpufdfz.cn/Scripts/jquery.js"></script>
+<script>
+$(document).ready(function(){
+    $(".menuBar li").hover(function () {
+        $(this).find("a").first().addClass("hover");
+        $(this).find("ul").first().fadeIn(200);
+    }, function () {
+        $(this).find("a").first().removeClass("hover");
+        $(this).find("ul").first().fadeOut(200);
+    });
+});
+</script>
         <div class="cycle">
             <ul>
-                <li><img src="images/flash1.jpg" /></li>
-                <li><img src="images/flash2.jpg" /></li>
-                <li><img src="images/flash3.jpg" /></li>
-                <li><img src="images/flash4.jpg" /></li>
-                <li><img src="images/flash5.jpg" /></li>
-                <li><img src="images/flash6.jpg" /></li>
-                <li><img src="images/flash7.jpg" /></li>
-                <li><img src="images/flash8.jpg" /></li>
+                <li><img src="https://images.pexels.com/photos/11421405/pexels-photo-11421405.jpeg" /></li>
+                <li><img src="https://images.pexels.com/photos/11421332/pexels-photo-11421332.jpeg" /></li>
+                <li><img src="https://images.pexels.com/photos/12167207/pexels-photo-12167207.jpeg" /></li>
+                <li><img src="https://images.pexels.com/photos/11421084/pexels-photo-11421084.jpeg" /></li>
+                <li><img src="https://images.pexels.com/photos/11421247/pexels-photo-11421247.jpeg" /></li>
+
             </ul>
-            <img src="images/prev.png" class="prev" />
-            <img src="images/next.png" class="next" />
+            <img src="https://www.qingpufdfz.cn/images/prev.png" class="prev" />
+            <img src="https://www.qingpufdfz.cn/images/next.png" class="next" />
         </div>
+
         <div class="center">
             <div class="notice">
                 <div>
@@ -66,4 +77,32 @@ Charities are struggling with declining donations to support relief efforts in U
                 </a>
             </div>
         </div>
+<script src="https://www.qingpufdfz.cn/Scripts/jquery.cycle.all.min.js"></script>
+<script>
+$(document).ready(function(){
+    $(".cycle").hover(function () {
+        $(".prev").fadeIn(200);
+        $(".next").fadeIn(200);
+    }, function () {
+        $(".prev").fadeOut(200);
+        $(".next").fadeOut(200);
+    });
+    $(".cycle ul").cycle({
+        fx: 'fade'
+        , speed: 600
+        , timeout: 3000
+        , prev: '.prev'
+        , next: '.next'
+    });
+    $(".slider ul").cycle({
+        fx: "fade"
+        , speed: 600
+        , timeout: 4000
+        , pager: ".slider ol"
+        , pagerAnchorBuilder: function (i, pic) {
+            return '<li>' + (i + 1) + '</li>';
+        }
+    });
+});
+</script>
 {% endblock %}
