--- a/20AAA3/template/about.html
+++ b/20AAA3/template/about.html
@@ -1,7 +1,36 @@
-{% extends 'mode.html' %}
+{% extends 'indexmode.html' %}
 {% block content %}
+<script src="https://www.qingpufdfz.cn/Scripts/jquery.js"></script>
+<script>
+$(document).ready(function(){
+    $(".menuBar li").hover(function () {
+        $(this).find("a").first().addClass("hover");
+        $(this).find("ul").first().fadeIn(200);
+    }, function () {
+        $(this).find("a").first().removeClass("hover");
+        $(this).find("ul").first().fadeOut(200);
+    });
+});
+</script>
 <li>
-    <p> Here's an introduction to a Ukrainian donation team in English:
+<div class="cycle">
+    <ul>
+                <li><img src="https://images.unsplash.com/photo-1469571486292-0ba58a3f068b?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" /></li>
+                <li><img src="https://images.unsplash.com/photo-1599059813005-11265ba4b4ce?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1770&q=80" /></li>
+                <li><img src="https://uploads-ssl.webflow.com/622f1b56680e912a542d09f4/622f303dd6c5a2c950778909_IMG_7071.jpg" /></li>
+                <li><img src="https://uploads-ssl.webflow.com/622f1b56680e912a542d09f4/62345f561c9b4b8853aed50d_Team%20Ukraine%20Love%20-%20Danish%20Supplies-p-800.jpeg" /></li>
+
+            </ul>
+            <img src="https://www.qingpufdfz.cn/images/prev.png" class="prev" />
+            <img src="https://www.qingpufdfz.cn/images/next.png" class="next" />
+</div>
+
+    <br>
+    <br>
+    <br>
+    <br>
+    <p class="ttext"><strong> our team</strong></p>
+    <p class="text0"> Here's an introduction to a Ukrainian donation team in English:
 
 The Ukrainian Donation Team is a dedicated group of individuals who work tirelessly to raise funds for important causes. With a focus on supporting those in need throughout Ukraine, the team collaborates with local organizations and charities to make a meaningful impact in the community.
 
@@ -13,4 +42,33 @@ Whether it's providing essential medical supplies to hospitals, supporting famil
 
 </p>
 </li>
+<script src="https://www.qingpufdfz.cn/Scripts/jquery.cycle.all.min.js"></script>
+<script>
+$(document).ready(function(){
+    $(".cycle").hover(function () {
+        $(".prev").fadeIn(200);
+        $(".next").fadeIn(200);
+    }, function () {
+        $(".prev").fadeOut(200);
+        $(".next").fadeOut(200);
+    });
+    $(".cycle ul").cycle({
+        fx: 'fade'
+        , speed: 600
+        , timeout: 3000
+        , prev: '.prev'
+        , next: '.next'
+    });
+    $(".slider ul").cycle({
+        fx: "fade"
+        , speed: 600
+        , timeout: 4000
+        , pager: ".slider ol"
+        , pagerAnchorBuilder: function (i, pic) {
+            return '<li>' + (i + 1) + '</li>';
+        }
+    });
+});
+</script>
+
 {% endblock %}
