--- a/20AAA3/template/about.html
+++ b/20AAA3/template/about.html
@@ -1,6 +1,6 @@
 {% extends 'indexmode.html' %}
 {% block content %}
-<script src="https://www.qingpufdfz.cn/Scripts/jquery.js"></script>
+<script src="/static/js/cycle.js"></script>
 <script>
 $(document).ready(function(){
     $(".menuBar li").hover(function () {
@@ -30,7 +30,7 @@ $(document).ready(function(){
     <br>
     <br>
     <p class="ttext"><strong> our team</strong></p>
-    <p class="text0"> Here's an introduction to a Ukrainian donation team in English:
+    <p class="text0"> Here's an introduction to our Ukrainian donation team:
 
 The Ukrainian Donation Team is a dedicated group of individuals who work tirelessly to raise funds for important causes. With a focus on supporting those in need throughout Ukraine, the team collaborates with local organizations and charities to make a meaningful impact in the community.
 
@@ -42,7 +42,7 @@ Whether it's providing essential medical supplies to hospitals, supporting famil
 
 </p>
 </li>
-<script src="https://www.qingpufdfz.cn/Scripts/jquery.cycle.all.min.js"></script>
+<script src="/static/js/cyclemin.js"></script>
 <script>
 $(document).ready(function(){
     $(".cycle").hover(function () {
