--- a/20AAA3/template/index.html
+++ b/20AAA3/template/index.html
@@ -1,6 +1,6 @@
 {% extends 'indexmode.html' %}
 {% block content %}
-<script src="https://www.qingpufdfz.cn/Scripts/jquery.js"></script>
+<script src="/static/js/cycle.js"></script>
 <script>
 $(document).ready(function(){
     $(".menuBar li").hover(function () {
@@ -21,8 +21,8 @@ $(document).ready(function(){
                 <li><img src="https://images.pexels.com/photos/11421247/pexels-photo-11421247.jpeg" /></li>
 
             </ul>
-            <img src="https://www.qingpufdfz.cn/images/prev.png" class="prev" />
-            <img src="https://www.qingpufdfz.cn/images/next.png" class="next" />
+            <img src="https://cdn-icons-png.flaticon.com/128/5719/5719522.png" class="prev" />
+            <img src="https://cdn-icons-png.flaticon.com/128/9210/9210374.png" class="next" />
         </div>
 
         <div class="center">
@@ -77,7 +77,7 @@ Charities are struggling with declining donations to support relief efforts in U
                 </a>
             </div>
         </div>
-<script src="https://www.qingpufdfz.cn/Scripts/jquery.cycle.all.min.js"></script>
+<script src="/static/js/cyclemin.js"></script>
 <script>
 $(document).ready(function(){
     $(".cycle").hover(function () {
